--- a/deploy/kabbalah/index.html
+++ b/deploy/kabbalah/index.html
@@ -69,6 +69,29 @@
         </style>
     </head>
     <body>
+        <div id="verify-age-location">
+            <div id="verify-container">
+                <h1>Delfai Oracle</h1>
+                <h2>Tarot Card Readings</h2>
+                <p>
+                    This website is restricted to people aged 18+ and living in
+                    areas where Tarot card reading and related activities are
+                    not explicitly banned. By clicking “Enter” you are agreeing
+                    to these terms.
+                </p>
+                <div id="verify-buttons">
+                    <button id="enter-btn" class="standard-btn">
+                        ENTER
+                    </button>
+                    <button
+                        class="standard-btn"
+                        onclick="window.location.href='https://google.com'"
+                    >
+                        LEAVE
+                    </button>
+                </div>
+            </div>
+        </div>
         <div class="static-container">
             <main>
                 <h1>Delfai Oracle</h1>
@@ -211,12 +234,12 @@
             groupsElem.innerHTML = `
                 <div id="trees">
                     <div>
-                        <h3 style="color: lightgreen">Traditional & Correct</h3>
-                        ${TreeOfLife({showGroups: true})}
-                    </div>
-                    <div>
                         <h3 style="color: salmon">Golden Dawn</h3>
                         ${TreeOfLife({showGroups: true, isKircher: true, kabbalahMajors})}
+                    </div>
+                    <div>
+                        <h3 style="color: lightgreen">Traditional & Correct</h3>
+                        ${TreeOfLife({showGroups: true})}
                     </div>
                 </div>
             `;
@@ -225,6 +248,7 @@
             jump && document.querySelector(`#${jump}`).scrollIntoView();
         </script>
 
-        <script src="/add-events.js" defer></script>
+        <script src="/scripts/verify-age-location.js"></script>
+        <script src="/scripts/add-events.js" defer></script>
     </body>
 </html>
