add sticky nav menu to kabbalah

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -41,6 +41,7 @@
         <link rel="stylesheet" href="/home/css/scroll-cards.css">
         <link rel="stylesheet" href="/home/css/footer.css">
         <link rel="stylesheet" href="/css/landing.css">
+        <link rel="stylesheet" href="/css/nav.css">
         <link rel="stylesheet" href="/css/static.css">
     </head>
     <body>
