--- a/deploy/kabbalah/index.html
+++ b/deploy/kabbalah/index.html
@@ -13,18 +13,18 @@
             gtag('config', 'G-96NNRQJT5M');
         </script>
         <meta charset="utf-8"/>
-        <title>Realigning Kabbalah in Tarot with Jewish Mysticism &mdash; Delfai Oracle</title>
+        <title>Tarot and Kabbalah &mdash; Delfai Oracle</title>
         <!-- meta_tags -->
         <meta name="type" property="og:type" content="website">
-        <meta name="title" property="og:title" content="Realigning Kabbalah in Tarot with Jewish Mysticism &mdash; Delfai Oracle">
+        <meta name="title" property="og:title" content="Tarot and Kabbalah &mdash; Delfai Oracle">
         <meta name="url" property="og:url" content="https://delfai.web.app">
-        <meta name="description" property="og:description" content="Learn the correct way to assign Major Arcana Tarot cards to the Tree of Life, according to traditional Kabbalah.">
+        <meta name="description" property="og:description" content="Learn how the Tarot cards relate to Kabbalah!">
         <meta name="image" property="og:image" content="https://delfai.web.app/home/assets/social-share.jpg">
         <!-- twitter meta tags -->
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="@delfaioracle">
-        <meta name="twitter:title" content="Realigning Kabbalah in Tarot with Jewish Mysticism &mdash; Delfai Oracle">
-        <meta name="twitter:description" content="Learn the correct way to assign Major Arcana Tarot cards to the Tree of Life, according to traditional Kabbalah.">
+        <meta name="twitter:title" content="Tarot and Kabbalah &mdash; Delfai Oracle">
+        <meta name="twitter:description" content="Learn how the Tarot cards relate to Kabbalah!">
         <meta name="twitter:image" content="https://delfai.web.app/home/assets/social-share.jpg">
         <!-- end meta tags -->
         <link rel="apple-touch-icon" sizes="180x180" href="/home/apple-touch-icon.png">
@@ -131,13 +131,11 @@
 
                 <h2>Tarot and Kabbala</h2>
 
-                <p>Lorem ipsum...</p>
+                <p>Learn how the Tarot cards relate to Kabbalah!</p>
 
                 <img id="traditional" class="separator" src="/home/assets/separator.png" alt="decorative dividing line made up of square swirls in the Greek style.">
 
                 <h2>Realigning Kabbalah in Tarot with Jewish Mysticism</h2>
-
-                <img class="separator" src="/home/assets/separator.png" alt="decorative dividing line made up of square swirls in the Greek style.">
 
                 <p>The <a href="https://en.wikipedia.org/wiki/Hermetic_Order_of_the_Golden_Dawn" target="_blank" rel="noopener">Order of the Golden Dawn</a> greatly expanded the esoteric symbolism of Tarot cards. Their system of the <a href="/home/assets/wheel.png" target="_blank" rel="noopener">decan calendar wheel</a> and how they assigned cards to Kabbalah's Tree of Life gave the deck a much deeper spiritual meaning. While I respect this group dearly, I do believe they made one key error with the Tree of Life.</p>
 
