--- a/deploy/index.html
+++ b/deploy/index.html
@@ -113,36 +113,33 @@
                         <br/>
                         Get instant readings for any question.
                     </p>
+                    <p id="inspotarot">
+                        <em>
+                            Looking for more Tarot psychology and less divination?
+                            Explore the power of Tarot and Shadow Work at
+                            <a href="https://inspotarot.com" target="_blank" rel="noopener">
+                                InspoTarot.com
+                            </a>
+                        </em>
+                    </p>
                 </div>
 
                 <table id="unpaid-vs-paid">
                     <thead>
                         <tr>
                             <th>
-                                FREE PLAN
-                            </th>
-                            <th>
-                                PAID PLAN
+                                DELFAI ORACLE IS NOW FREE!
                             </th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td>
-                                5 free and instant Tarot readings
-                            </td>
                             <td>unlimited instant readings</td>
                         </tr>
                         <tr>
-                            <td>
-                                6 cards for <a href="/home/assets/wheel.png" target="_blank" rel="noopener">the current date</a>
-                            </td>
                             <td>cards for any date</td>
                         </tr>
                         <tr>
-                            <td>
-                                no custom spreads
-                            </td>
                             <td>
                                 any custom spread
                                 <br/>
@@ -153,22 +150,16 @@
                         </tr>
                         <tr>
                             <td>
-                                no <a href="/kabbalah" target="_blank" rel="noopener">Kabbalah</a> info
-                            </td>
-                            <td>
                                 all info for <a href="/kabbalah" target="_blank" rel="noopener">Tarot and Kabbalah</a>
                             </td>
                         </tr>
                         <tr id="pricing">
                             <td>
-                                Start your free trial today <em>with no payment info!</em>
-                                <button class="log-in-btn standard-btn">Begin Free Trial</button>
-                            </td>
-                            <td>
-                                Unlock all features for just
+                                Unlock all features for <s>just
                                 <br/>
+                                    $2.99 a month</s>
                                 <strong>
-                                    $2.99 a month!
+                                    FREE!
                                 </strong>
                                 <button class="standard-btn subscribe-btn">SUBSCRIBE</button>
                             </td>
@@ -244,7 +235,7 @@
                     <ul>
                         <li>
                             <a class="subscribe-btn">Subscribe</a>
-                            &nbsp; | &nbsp;
+                            &nbsp;|&nbsp;
                             <a href="/#refunds">Refund Policy</a>
                         </li>
                         <li>
