remove /functions and switch to aws-openai endpoint

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -83,7 +83,7 @@
                         <a href="/#contact">CONTACT</a>
                     </li>
                     <li>
-                        <a href="/#privacy">PRIVACY & REFUNDS</a>
+                        <a href="/#privacy">PRIVACY POLICY</a>
                     </li>
                     <li>
                         <a href="/#disclaimer">DISCLAIMER</a>
@@ -189,26 +189,6 @@
                     </div>
                 </div>
 
-                <div id="refunds" class="landing-section">
-                    <h2>Refund Policy</h2>
-                    <div class="info-container">
-                        <p>
-                            <small>
-                                <em>
-                                    Delfai Oracle does not offer refunds for monthly subscriptions of $2.99. Paid users may cancel their subscriptions at any time under the "Account" section after signing in.
-                                </em>
-                            </small>
-                        </p>
-                        <p>
-                            <small>
-                                <em>
-                                    Cancellations take effect immediately, and Delfai Oracle does not prorate the days remaining in the monthly subscription.
-                                </em>
-                            </small>
-                        </p>
-                    </div>
-                </div>
-
                 <div id="disclaimer" class="landing-section">
                     <h2>Disclaimer</h2>
                     <div class="info-container">
@@ -233,11 +213,6 @@
             <footer>
                 <div id="footer-container">
                     <ul>
-                        <li>
-                            <a class="subscribe-btn">Subscribe</a>
-                            &nbsp;|&nbsp;
-                            <a href="/#refunds">Refund Policy</a>
-                        </li>
                         <li>
                             <a href="/#privacy">Privacy Policy</a>
                         </li>
