--- a/deploy/index.html
+++ b/deploy/index.html
@@ -117,7 +117,7 @@
                         <em>
                             Looking for more Tarot psychology and less divination?
                             Explore the power of Tarot and Shadow Work at
-                            <a href="https://inspotarot.com" target="_blank" rel="noopener">
+                            <a href="https://inspotarot.web.app" target="_blank" rel="noopener">
                                 InspoTarot.com
                             </a>
                         </em>
